# server

./: CMakeLists.txt  Makefile
doxy/: Calculator.cpp  Calculator.h  Doxyfile  Logger.cpp  Logger.h  Server.cpp  Server.h  Session.cpp  Session.h  UserDatabase.cpp  UserDatabase.h  main.cpp
doxy/html/: Calculator_8cpp.html  Calculator_8cpp__incl.map  Calculator_8cpp__incl.md5  Calculator_8h_source.html  Logger_8cpp.html  Logger_8cpp__incl.map  Logger_8cpp__incl.md5  Logger_8h_source.html  Server_8cpp.html  Server_8cpp__incl.map  Server_8cpp__incl.md5  Server_8h_source.html  Session_8cpp.html  Session_8cpp__incl.map  Session_8cpp__incl.md5  Session_8h_source.html  UserDatabase_8cpp.html  UserDatabase_8cpp__incl.map  UserDatabase_8cpp__incl.md5  UserDatabase_8h_source.html  annotated.html  classCalculator-members.html  classCalculator.html  classLogger-members.html  classLogger.html  classServer-members.html  classServer.html  classSession-members.html  classSession.html  classUserDatabase-members.html  classUserDatabase.html  classes.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5
doxy/html/search/: all_0.js  all_3.js  all_6.js  all_7.js  files_0.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js
doxy/latex/: Calculator_8cpp.tex  Calculator_8cpp__incl.eps  Calculator_8cpp__incl.md5  Calculator_8h_source.tex  Logger_8cpp.tex  Logger_8cpp__incl.eps  Logger_8cpp__incl.md5  Logger_8h_source.tex  Server_8cpp.tex  Server_8cpp__incl.eps  Server_8cpp__incl.md5  Server_8h_source.tex  Session_8cpp.tex  Session_8cpp__incl.eps  Session_8cpp__incl.md5  Session_8h_source.tex  UserDatabase_8cpp.tex  UserDatabase_8cpp__incl.eps  UserDatabase_8cpp__incl.md5  UserDatabase_8h_source.tex  annotated.tex  classCalculator.tex  classLogger.tex  classServer.tex  classSession.tex  classUserDatabase.tex  files.tex  main_8cpp.tex  main_8cpp__incl.eps  main_8cpp__incl.md5  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
scripts/: start_test_server.sh
src/: Calculator.cpp  Calculator.h  Logger.cpp  Logger.h  Server.cpp  Server.h  Session.cpp  Session.h  UserDatabase.cpp  UserDatabase.h  main.cpp
test_data/: users_test.txt
tests/: CMakeLists.txt  test_Calculator.cpp  test_Logger.cpp  test_main.cpp
tests/functional_tests/: CMakeLists.txt  functional_tests.cpp  test_client.cpp  test_client.h  test_config.h  test_utils.cpp  test_utils.h
tests/unit_tests/: test_Session.cpp  test_UserDatabase.cpp
